# TestApplication1

./: .gitignore  CMakeLists.txt  Logger.h  README.md  Shape.cpp  Shape.h  TestApplication1.sln  TestApplication1.vcxproj  TestApplication1.vcxproj.filters  ch1.cpp  concepts.md  functions.cpp  log.h  main.cpp  main_legacy.cpp  results.json  timer.h
misc/: CMakeListsExample.cmake
models/: Box.h
models/shapes/: Circle.cpp  Circle.h  Printable.h  Rectangle.h  Shape.h  shapestructs.h
shapes/: Circle.cpp  Circle.h  Shape.cpp  Shape.h
src/: functions.cpp  instrumentor.h  main.cpp  main_legacy.cpp  memory_tracking.cpp  timer.h  worldo_test.cpp
src/models/: String.h  random_singleton.h
src/models/shapes/: Circle.cpp  Rectangle.cpp  shapestructs.h
src/structures/: arrray.h  dynamic_array.h  static_array.h
